Updates to styles to avoid the notch on iOS

--- a/mobile/frontend/src/styles.css
+++ b/mobile/frontend/src/styles.css
@@ -8,20 +8,21 @@ body {
     font-weight: 400;
     background-color: #F3F4F6;
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    top: env(safe-area-inset-top);
+    bottom: env(safe-area-inset-bottom);
+    left: env(safe-area-inset-left);
+    right: env(safe-area-inset-right);
 }
 
 #app {
-    width: 100vw;
-    height: 100vh;
+    width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
+    height: calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
 }
 
 #main {
-    width: 100vw;
-    height: calc(100vh - 51px);
+    margin-top: 51px;
+    width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
+    height: calc(100vh - 51px - env(safe-area-inset-top) - env(safe-area-inset-bottom));
     overflow: hidden;
 }
 
@@ -64,7 +65,7 @@ i {
 #sidebar {
     z-index: 1000;
     position: fixed;
-    top: 0;
+    top: env(safe-area-inset-top);
     bottom: -100;
     transition: transform .1s ease-out;
     will-change: transform;
@@ -73,7 +74,7 @@ i {
     background-color: white;
 
     /* Left sidebar */
-    left: 0;
+    left: env(safe-area-inset-left);
     transform: translateX(-100%);
 
     /* Sidebar shadow */
@@ -95,9 +96,9 @@ i {
 #navbar {
     z-index: 500;
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
+    top: env(safe-area-inset-top);
+    left: env(safe-area-inset-left);
+    right: env(safe-area-inset-right);
     height: 52px;
     background-color: white;
     border-bottom: 1px solid rgb(218, 220, 224);
@@ -106,11 +107,6 @@ i {
 
 #navbar.search {
     height: 104px;
-}
-
-
-#main {
-    margin-top: 51px;
 }
 
 /* Drag and drop */
@@ -144,45 +140,45 @@ i {
 .photo {
     position: fixed;
     top: 100%;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    bottom: env(safe-area-inset-bottom);
+    left: env(safe-area-inset-left);
+    right: env(safe-area-inset-right);
     z-index: 2000;
     transition: all .35s ease-out;
 }
 
 .photo.open {
-    top: 0;
+    top: env(safe-area-inset-top);
 }
 
 .photo-header {
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
+    top: env(safe-area-inset-top);
+    left: env(safe-area-inset-left);
+    right: env(safe-area-inset-right);
     height: 50px;
     z-index: 2100;
 }
 
 .photo-container {
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    top: env(safe-area-inset-top);
+    left: env(safe-area-inset-left);
+    right: env(safe-area-inset-right);
+    bottom: env(safe-area-inset-bottom);
 }
 
 .photo-container img {
     position: absolute;
     width: auto;
     height: auto;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    top: env(safe-area-inset-top);
+    bottom: env(safe-area-inset-bottom);
+    left: env(safe-area-inset-left);
+    right: env(safe-area-inset-right);
     margin: auto;
-    max-width: 100vw;
-    max-height: 100vh;
+    max-width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
+    max-height: calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
 }
 
 .photo-nav {
@@ -193,16 +189,16 @@ i {
 
 .info {
     position: fixed;
-    top: 0;
-    bottom: 0;
+    top: env(safe-area-inset-top);
+    bottom: env(safe-area-inset-bottom);
     left: 100%;
-    right: 0;
+    right: env(safe-area-inset-right);
     z-index: 3000;
     transition: all .35s ease-out;
 }
 
 .info.open {
-    left: 0;
+    left: env(safe-area-inset-left);
 }
 
 @media (min-width: 640px) {
@@ -213,9 +209,9 @@ i {
 
 .info-header {
     position: fixed;
-    top: 0;
+    top: env(safe-area-inset-top);
     left: 100%;
-    right: 0;
+    right: env(safe-area-inset-right);
     height: 50px;
     border-bottom: 1px solid rgb(218, 220, 224);
     z-index: 3100;
@@ -223,7 +219,7 @@ i {
 }
 
 .info.open>.info-header {
-    left: 0;
+    left: env(safe-area-inset-left);
 }
 
 @media (min-width: 640px) {
